# scribe

./: .gitignore  CLAUDE.md  LICENSE  README.md  package-lock.json  package.json
astro/: astro.config.mjs  package.json  scribe-newspaper.html  tailwind.config.mjs  wrangler.jsonc
astro/src/components/: AISummaryCard.astro  BillCard.astro  BillReadingStatus.astro  BillTimeline.astro  MemberCard.astro  MinistryCard.astro  Navbar.astro  Pagination.astro  QuestionCard.astro  SearchFilter.astro  SectionCard.astro  SessionCard.astro  SpeakerPills.astro
astro/src/components/budgets/: BudgetTreemapGraph.astro  SectorTrendChart.astro
astro/src/layouts/: Layout.astro  NewspaperLayout.astro
astro/src/lib/: db.ts  party.ts  slugify.ts  types.ts
astro/src/pages/: about.astro  budgets.astro  index.astro  landing.astro
astro/src/pages/bills/: [id].astro  (+2 more)
astro/src/styles/: global.css
launchd/: com.secondreading.daily.plist
python/: README.md  batch_process_sqlite.py  cleanup_duplicates.py  db.py  generate_summaries.py  hansard_api.py  parliament_session.py  parliament_sitting.py  pyproject.toml  util.py
scripts/: daily_pipeline.sh
src/app/: layout.tsx  page.tsx
src/app/bills/: page.tsx
src/app/members/: page.tsx
src/app/ministries/: page.tsx
src/app/motions/: page.tsx
src/app/questions/: page.tsx
src/app/sessions/: page.tsx
src/components/: MemberCard.tsx  MemberFilters.tsx  Navbar.tsx  QuestionCard.tsx  QuestionFilters.tsx  SearchBar.tsx  SectionCard.tsx  SessionFilters.tsx
src/lib/: db.ts  supabase.ts
src/types/: index.ts
supabase/: schema.sql
(+28 files in other folders)
